# ArtStudio

./: .clang-format  CMakeLists.txt  README.md  main.cc
Shaders/: Axis.frag  Axis.vert  Quad.frag
example/: CMakeLists.txt
example/1-HelloWorld/: HelloWorld.frag  HelloWorld.vert  main.cc
example/1-hello-world/: main.cc
example/2-RippleDeformer/: RippleDeformer.frag  RippleDeformer.vert  main.cc
example/3-SubdivisionGeometry/: SubdivisionGeometry.geom  SubdivisionGeometry.vert  main.cc
example/4-SubdivisionGeometry_instanced/: SubdivisionGeometry_instanced.geom  SubdivisionGeometry_instanced.vert  main.cc
example/Camera/: main.cc
example/Camera/shaders/: Common.frag  Quad.vert  final.frag  peel.vert
example/DualDepthPeeling/: main.cc
example/DualDepthPeeling/shaders/: blend.frag  final.frag  final.vert  init.frag  peel.frag
example/FrontPeeling/: main.cc
example/MirrorUsingFBO/: main.cc
example/RefineCamera/: main.cc
example/RefineCamera/shaders/: cube.frag  peel.frag
example/TransformFeedback/: ParticleSystem.cc  ParticleSystem.h  billboard.frag  billboard.geom  main.cc  particle.geom  particle.vert
example/camera-v2/: main.cc
example/camera-v2/shaders/: blend.frag
example/depth-peeling/: blend.frag  blend.vert  cube.frag  cube.vert  final.frag  front_peel.frag  front_peel.vert  main.cc
example/init-project/: main.cc
src/: Application.cc  Application.h  Axis.cc  Axis.h  CMakeLists.txt  Camera.cc  Camera.h  Cube.cc  Cube.h  GLu.h  Grid.cc  Grid.h  Log.cc  Log.h  Plane.cc  Plane.h  Quad.cc  Quad.h  RandomTexture.cc  RandomTexture.h  RenderableObject.cc  RenderableObject.h  ScreenSizeQuad.cc  ScreenSizeQuad.h  Shader.cc  Shader.h  Texture.cc  Texture.h  UnitCube.cc  UnitCube.h  Util.cc  Util.h  mathematics.h
src/shaders/: Common.vert  Quad.frag  Quad.vert  ScreenSizeQuad.frag  ScreenSizeQuad.vert  UnitCube.frag  UnitCube.vert
